# Messenger

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  build.sh  docker-compose.yml  run-docker-compose.sh  server.env  style.sh
.github/workflows/: pipeline.yml
.github/worlflows/: pipeline.yml
m2m_chat_service/: CMakeLists.txt
m2m_chat_service/app/: CMakeLists.txt  main.cpp
m2m_chat_service/tests/: CMakeLists.txt
messenger_qa/: create_venv.sh  run_tests.sh  test_style.py  tox.ini
messenger_qa/m2m_chat_service_qa/: test_get_handler.py  utils.py
microservices/: CMakeLists.txt  Dockerfile  Dockerfile.m2m_chat_service  Dockerfile_make_and_push_image.sh  build_all.sh
microservices/core/: CMakeLists.txt  alias.h  base_handler.h  env.h  http_assert.h  network_navigation.h  router.h  server.h  server_config.h  server_config_factory.h  server_config_parser.h  target_resolver.h  timeout_limiter.h
microservices/core/src/include/corelib/: alias.h  http_assert.h  router.h  server.h
microservices/core/src/private/: env.h  http_connection.h  network_navigation.h  server_config.h  server_config_factory.h  target_resolver.h  timeout_limiter.h
microservices/core/tests/fuzz/: CMakeLists.txt  run_tests.sh  test_fuzz_router.cpp  utils.h
microservices/core/tests/gtest/: CMakeLists.txt  build.sh  run_tests.sh  test_router.cpp
microservices/core_tests/fuzz/: CMakeLists.txt  run_tests_pipeline.sh  test_fuzz_router.cpp  utils.h
microservices/core_tests/gtest/: CMakeLists.txt  test_router.cpp
microservices/m2m_chat_service/: CMakeLists.txt  Dockerfile  build.sh  build_docker_image_and_push.sh  docker-compose-m2m-chat-service.yml  down_docker_compose.sh  run.sh  run_cppcheck.sh  run_docker.sh  server.env
microservices/m2m_chat_service/app/: CMakeLists.txt  get.h  handler_types.h  main.cpp  server_config.json
microservices/m2m_chat_service/tests/: CMakeLists.txt  main.cpp
microservices/p2p_chat_service/: main.cpp
microservices/user_service/: main.cpp
nginx/: local.conf
